- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    None
- 
    5.3.0 Beta1
- 
    tizen, linux
Current version of qtwayland and wayland do not support minimization (hide/show window),
but there's a proposal to get this feature using alternate shell xdg.
The xdg-shell protocol is not yet accepted as wayland stable API
but it's good postive feedback since it's already used
or proposed for others toolkits : EFL, GTK+ and Ozone too.
And noticed that it was not in Qt, so I tried to fix this gap.
I've experimenting this on tizen platform which is shipping
- qt5-qtwayland-5.2.95+rc1 (e7a1e121d9cb92e89e53baba81aceedca24f2b94)
- wayland 1.4.0
You can check a demo video (qt-tizen-qtwayland-xdg-shell-20140425-rzr)
of the use case at :
https://www.youtube.com/watch?v=awQHSkO7PKc#
Is anyone interested for testing this, I shared the code in my git branch :
https://qt.gitorious.org/qt/qtwayland-rzr# sandbox/pcoval/for-upstream
Now I guess I should push to the dev branch for reviewing on :
https://codereview.qt-project.org/#dashboard,1003234.
The feature can be disabled at compile time by removing the flag in client.pro
Since xdg-shell is experimental, code fallback to WaylandShell is no xdg
Regards
| For Gerrit Dashboard: QTBUG-38633 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 84221,6 | Add xdg-shell protocol file version 1.4.0 | dev | qt/qtwayland | Status: MERGED | +2 | 0 | 
| 84222,11 | Add minimize feature to QWindow using wayland's xdg-shell | dev | qt/qtwayland | Status: MERGED | +2 | 0 | 
| 87260,6 | xdg-shell: upgrade to support current version (weston-1.5.0) | dev | qt/qtwayland | Status: MERGED | +2 | 0 | 
| 100290,9 | xdg-shell: upgrade to support current version (weston-1.6.0) | dev | qt/qtwayland | Status: MERGED | +2 | 0 | 
| 115579,1 | xdg-shell: upgrade to support current version (weston-1.6.0) | 5.4 | qt/qtwayland | Status: ABANDONED | 0 | 0 | 
| 115580,1 | xdg-shell: upgrade to support current version (weston-1.8.0) | 5.4 | qt/qtwayland | Status: ABANDONED | 0 | 0 |