src/client/client.pro
@@ -42,6 +42,7 @@ WAYLANDCLIENTSOURCES += \
             ../extensions/qtkey-extension.xml \
             ../extensions/windowmanager.xml \
             ../3rdparty/protocol/text.xml \
+            ../3rdparty/protocol/xdg-shell.xml \
 
 SOURCES +=  qwaylandintegration.cpp \
             qwaylandnativeinterface.cpp \
@@ -58,6 +59,8 @@ SOURCES +=  qwaylandintegration.cpp \
             qwaylanddatadevicemanager.cpp \
             qwaylanddatasource.cpp \
             qwaylandshellsurface.cpp \
+            qwaylandwlshellsurface.cpp \
+            qwaylandxdgsurface.cpp \
             qwaylandextendedoutput.cpp \
             qwaylandextendedsurface.cpp \
             qwaylandsubsurface.cpp \
@@ -86,6 +89,8 @@ HEADERS +=  qwaylandintegration_p.h \
             qwaylanddatadevicemanager_p.h \
             qwaylanddatasource_p.h \
             qwaylandshellsurface_p.h \
+            qwaylandwlshellsurface_p.h \
+            qwaylandxdgsurface_p.h \
             qwaylandextendedoutput_p.h \
             qwaylandextendedsurface_p.h \
             qwaylandsubsurface_p.h \
